syntax = "proto3";
package com.training.grpc;

message CreateUserRequest {
  string first_name = 1;
  string last_name = 2;
  int32 age = 3;
}

message CreateUserResponse {
  User user = 1;
}

message GetUserRequest {
  int32 user_id = 1;
}

message GetUserResponse {
    User user = 1;
}

message UpdateUserRequest {
  int32 user_id = 1;
  string first_name = 2;
  string last_name = 3;
  int32 age = 4;
}

message UpdateUserResponse {
    oneof response {
      User user = 1;
      Error error =2;
    }
}

message DeleteUserRequest {
  int32 user_id = 1;
}

message DeleteUserResponse {
  string message = 1;
}

message Error {
  string message = 1;
}

message User {
  int32 user_id = 1;
  string first_name = 2;
  string last_name = 3;
  int32 age = 4;
}

service UserService {
  rpc createUser(CreateUserRequest) returns (CreateUserResponse);
  rpc getUser(GetUserRequest) returns (GetUserResponse);
  rpc updateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc deleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}